# mapworld

./: .gitignore  LICENSE  README.md  prepare_path.sh  pyproject.toml  requirements.txt  test.py
src/mapworld/: ade_maps.py  categories.json  mapping.json  maps.py  update_paths.py  utils.py  world.py
src/tests/: test_mm_map.py  test_text_map.py
tests/: test_graph_generation.py  test_image_paths.py
